--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,6 +27,7 @@ archives:
   files:
     - lib/**/*
     - script/**/*
+    - examples/**/*
 checksum:
   name_template: 'checksums.txt'
 snapshot:
